--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,10 @@
     "minimum-stability": "dev",
     "require": {
         "laravel/framework": "5.0.*"
+    },
+    "autoload": {
+        "psr-4": {
+            "Volrac\\Sonus\\": "src/"
+        }
     }
 }
